# ClangReflectionTool

./: CMakeLists.txt  CMakePresets.json  README.md
extra/: CMakePresets.json  compile_commands.json
include/HeaderTool/: CodeWriter.hpp  Core.hpp  CppDesc.hpp  CppWriter.hpp  EnumEmitter.hpp  EnumParser.hpp  MacroAttributes.hpp  StructEmitter.hpp  StructParser.hpp
src/: CodeWriter.cpp  CppWriter.cpp  EnumEmitter.cpp  EnumParser.cpp  MacroAttributes.cpp  StructEmitter.cpp  StructParser.cpp  main.cpp
